Add test coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ jdk:
   - openjdk11
   - oraclejdk11
   - oraclejdk15
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter format-coverage target/site/jacoco/jacoco.xml --input-type jacoco
+  - ./cc-test-reporter upload-coverage
