--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.release>17</maven.compiler.release>
     <revision>1.0.0-SNAPSHOT</revision>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.organization>lyang</sonar.organization>
